--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -22,6 +22,7 @@ top
 ---------------------------------------------------------------------*/
 main{
   .wrapper {
+    width: 100%;
     display: flex;
     align-items: center;
     .natura-menu-link {
