--- a/src/sass/_sub.scss
+++ b/src/sass/_sub.scss
@@ -1,33 +1,87 @@
 main {
   width: 100%;
   height: 100vh;
-  display: flex;
-  align-items: flex-start;
-  .gallery-preview-wrapper {
-    width: calc(100% - 460px);
-    min-width: 800px;
-    height: 70%;
+  position: relative;
+  .sub-nav-wrap {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 1;
+    .sub-nav-icon {
+      position: absolute;
+      right: 0;
+      cursor: pointer;
+      &:hover {
+        transition: 0.3s;
+        opacity: 0.8;
+      }
+      path {
+        fill: $font-color;
+      }
+    }
+    .sub-nav-list-wrap {
+      display: none;
+      .sub-nav-list {
+        width: 300px;
+        display: flex;
+        flex-wrap: wrap;
+        position: absolute;
+        top: 30px;
+        right: 0;
+        > li {
+          background-size: cover;
+          opacity: 1;
+          transition: 0.3s;
+          &:hover {
+            opacity: 0.7;
+          }
+          a {
+            width: 100px;
+            height: 100px;
+            display: block;
+          }
+        }
+      }
+    }
+  }
+  ul.gallery-preview {
+    width: 100%;
+    height: calc(100% - 136px);
     background: #000000;
-    .gallery-preview {
+    position: relative;
+    > li {
+      &:first-of-type {
+        display: block;
+      }
       width: 100%;
       height: 100%;
-      background: url("/assets/images/hasu01/hasu01_01.jpg") no-repeat;
+      position: absolute;
+      display: none;
+      transform: scale(0.9);
+      background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
     }
   }
   ul.gallery-thumb-list {
-    width: 460px;
+    height: 136px;
+    white-space: nowrap;
+    overflow-x: scroll;
     padding: 6px;
-    display: flex;
-    flex-wrap: wrap;
+    font-size: 0;
+    background: $light-background-color;
     > li {
       width: 100px;
       height: 100px;
-      margin: 6px;
-      background: url("/assets/images/hasu01/hasu01_01.jpg") no-repeat;
+      margin: 12px 6px;
+      background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
+      display: inline-block;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.8;
+      }
     }
   }
 }
