--- a/src/sass/_sub.scss
+++ b/src/sass/_sub.scss
@@ -76,6 +76,7 @@ main {
     height: 136px;
     white-space: nowrap;
     overflow-x: scroll;
+    overflow-y: hidden;
     padding: 6px;
     font-size: 0;
     background: $light-background-color;
@@ -88,8 +89,10 @@ main {
       background-position: center;
       display: inline-block;
       cursor: pointer;
+      transition: 0.3s;
       &:hover {
         opacity: 0.8;
+        transform: scale(1.05);
       }
     }
   }
