--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -5,6 +5,25 @@ variable
 $font-color : #A03232;
 $light-background-color : #171d2d;
 $dark-background-color : #000625;
+$breakpoint-mobile: 510px;
+
+@mixin max-screen($break-point) {
+  @media screen and (max-width: $break-point) {
+    @content;
+  }
+}
+
+@mixin min-screen($break-point) {
+  @media screen and (min-width: $break-point) {
+    @content;
+  }
+}
+
+@mixin screen($break-point-min, $break-point-max) {
+  @media screen and (min-width: $break-point-min) and (max-width: $break-point-max) {
+    @content;
+  }
+}
 /*---------------------------------------------------------------------
 common
 ---------------------------------------------------------------------*/
@@ -12,7 +31,13 @@ body {
   background: $light-background-color;
   font-family: Lato, "Noto Sans JP", "游ゴシック Medium", "游ゴシック体", "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
-header{
+
+.contents-wrapper{
+  display: none; // 読み込みが完了するまでは非表示
+}
+
+.isSP {
+  display: none;
 }
 
 /*---------------------------------------------------------------------
@@ -23,18 +48,32 @@ main{
     width: 100%;
     display: flex;
     align-items: center;
+    @include max-screen($breakpoint-mobile) {
+      display: block;
+    }
     .natura-menu-link {
       width: 40%;
       text-align: center;
       font-size: 25px;
+      @include max-screen($breakpoint-mobile) {
+        width: 100%;
+        font-size: 22px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
       ul.natura-list-link {
         display: inline-block;
         text-align: left;
         > li {
           + li {
             margin-top: 80px;
+            @include max-screen($breakpoint-mobile) {
+              margin-top: 0;
+            }
           }
-          a{
+          a {
             color: $font-color;
             text-decoration: none;
             &:hover {
@@ -43,15 +82,44 @@ main{
             }
           }
         }
+        @include max-screen($breakpoint-mobile) {
+          display: none;
+          margin: 10px;
+        }
+      }
+      .sp-nav {
+        @include max-screen($breakpoint-mobile) {
+          display: inline-block;
+          margin: 10px;
+          fill: $font-color;
+        }
+      }
+      .sp-nav.isOpen {
+        @include max-screen($breakpoint-mobile) {
+          transform: rotate(180deg);
+        }
       }
     }
     .natura-field-nav {
       width: 60%;
+      @include max-screen($breakpoint-mobile) {
+        width: 100%;
+      }
       ul.natura-list-nav {
         height: 100vh;
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        @include max-screen($breakpoint-mobile) {
+          width: 360px;
+          height: 360px;
+          position: absolute;
+          top: 20%;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          margin: auto;
+        }
         > li {
           width: calc(100% / 3 - 20px);
           height: calc(100% / 3 - 20px);
@@ -60,6 +128,10 @@ main{
           background-repeat: no-repeat;
           background-position: center;
           display: none;
+          @include max-screen($breakpoint-mobile) {
+            width: 100px;
+            height: 100px;
+          }
           a {
             display: inline-block;
             height: 100%;
@@ -88,7 +160,12 @@ main{
     }
   }
 }
-
+footer {
+  position: absolute;
+  bottom: 0;
+  font-size: 12px;
+  color: #646464;
+}
 /*---------------------------------------------------------------------
 top modal
 ---------------------------------------------------------------------*/
@@ -112,12 +189,36 @@ top modal
     z-index: 1;
   }
 }
-
-footer {
-  position: absolute;
-  bottom: 0;
-  font-size: 12px;
-  color: #646464;
+/*---------------------------------------------------------------------
+loading
+---------------------------------------------------------------------*/
+.loading-display {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  .spinner {
+    width: 100px;
+    height: 100px;
+    opacity: 0.8;
+    background-color: #666666;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    animation: sk-scaleout 2s infinite;
+  }
+  @keyframes sk-scaleout {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1.0);
+      opacity: 0;
+    }
+  }
 }
 /*---------------------------------------------------------------------
 sub
